# windows-service-test

./: Cargo.toml  README.md  stop
src/: install_service.rs  main.rs  uninstall_service.rs
