[package]
name = "windows-service-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-service = "0.6.0"
reqwest = {version = "0.11.14", features = ["blocking"]}
windows-sys = "0.45.0"
tokio = {version = "1.26.0", features = ["full"] }
daemonize = "0.5.0"

[[bin]]
name = "ping_service"
path = "src/main.rs"

[[bin]]
name = "install_service"
path = "src/install_service.rs"

[[bin]]
name = "uninstall_service"
path = "src/uninstall_service.rs"